Left and right sections base

--- a/index.html
+++ b/index.html
@@ -10,6 +10,45 @@
 </head>
 <body>
 
+<div id="full_back">
+    <div id="game_board" class="wt_center">
+        <div class="game_board_inner">
+            <!--LEFT-SIDE-->
+            <div class="left_side">
+                <div class="dice-7">
+                    <div class="dice_border"></div>
+                    <div class="dice_border"></div>
+                    <div class="dice_border"></div>
+                    <div class="dice_border"></div>
+                    <div class="dice_border"></div>
+                    <div class="dice_border"></div>
+                    <div class="dice_border"></div>
+                </div>
+                <div class="dice-7 r-dice-7">
+                    <div class="dice_border"></div>
+                    <div class="dice_border"></div>
+                    <div class="dice_border"></div>
+                    <div class="dice_border"></div>
+                    <div class="dice_border"></div>
+                    <div class="dice_border"></div>
+                </div>
+            </div>
+            <!--CENTER SIDE-->
+            <div class="center_side">
+
+            </div>
+            <!--RIGHT SIDE-->
+            <div class="right_side">
+                <div class="players-section">
+                    <div class="player-card-0 p-card"></div>
+                    <div class="player-card-1 p-card"></div>
+                    <div class="player-card-2 p-card"></div>
+                    <div class="player-card-3 p-card"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script src="js/main.js"></script>
 </body>
