Updated dice images and player card images

--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
             <!--LEFT-SIDE-->
             <div class="left_side">
                 <div class="dice-7">
-                    <div class="dice_border d1"></div>
-                    <div class="dice_border"></div>
-                    <div class="dice_border"></div>
-                    <div class="dice_border"></div>
-                    <div class="dice_border"></div>
-                    <div class="dice_border"></div>
-                    <div class="dice_border"></div>
+                    <img src="images/red-bullet.jpg" class="dice_border d1">
+                    <img src="images/red-bullet.jpg" class="dice_border">
+                    <img src="images/red-bullet.jpg" class="dice_border">
+                    <img src="images/yellow-walk.jpg" class="dice_border">
+                    <img src="images/yellow-walk.jpg" class="dice_border">
+                    <img src="images/yellow-walk.jpg" class="dice_border">
+                    <img src="images/yellow-walk.jpg" class="dice_border">
                 </div>
                 <div class="dice-7 r-dice-7">
-                    <div class="dice_border d1"></div>
-                    <div class="dice_border"></div>
-                    <div class="dice_border"></div>
-                    <div class="dice_border"></div>
-                    <div class="dice_border"></div>
-                    <div class="dice_border"></div>
+                    <img src="images/green-brain.jpg" class="dice_border d1">
+                    <img src="images/green-brain.jpg" class="dice_border">
+                    <img src="images/green-brain.jpg" class="dice_border">
+                    <img src="images/green-brain.jpg" class="dice_border">
+                    <img src="images/green-brain.jpg" class="dice_border">
+                    <img src="images/green-brain.jpg" class="dice_border">
                 </div>
             </div>
             <!--CENTER SIDE-->
@@ -43,10 +43,12 @@
                         <h1>ZOMBIE DICE</h1>
                     </div>
                     <div class="zd-scorer center_rows">
-                        <div class="zd-brains half_row">
-
-                        </div>
                         <div class="zd-shots half_row">
+                            <div class="shot-0 shot_icon"></div>
+                            <div class="shot-1 shot_icon"></div>
+                            <div class="shot-2 shot_icon"></div>
+                        </div>
+                        <div class="zd-brains half_row">
 
                         </div>
                     </div>
