--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 </style>
 
 <div id="full_back">
+
+    <div class="current-player-display wt_center">
+        <h1 class="cpd_text wt_center">PLAYER<br>1</h1>
+    </div>
+
     <div id="game_board" class="wt_center">
         <div class="game_board_inner">
             <!--LEFT-SIDE-->
@@ -83,6 +88,6 @@
     </div>
 </div>
 
-<script src="js/main.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
