Number index updates and chooseDice function

--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
             <!--LEFT-SIDE-->
             <div class="left_side">
                 <div class="dice-7">
-                    <img src="images/red-bullet.jpg" class="dice_border d1">
-                    <img src="images/red-bullet.jpg" class="dice_border">
-                    <img src="images/red-bullet.jpg" class="dice_border">
-                    <img src="images/yellow-walk.jpg" class="dice_border">
-                    <img src="images/yellow-walk.jpg" class="dice_border">
-                    <img src="images/yellow-walk.jpg" class="dice_border">
-                    <img src="images/yellow-walk.jpg" class="dice_border">
+                    <img src="images/red-bullet.jpg" class="dice_border d1 dice-12">
+                    <img src="images/red-bullet.jpg" class="dice_border dice-11">
+                    <img src="images/red-bullet.jpg" class="dice_border dice-10">
+                    <img src="images/yellow-walk.jpg" class="dice_border dice-9">
+                    <img src="images/yellow-walk.jpg" class="dice_border dice-8">
+                    <img src="images/yellow-walk.jpg" class="dice_border dice-7">
+                    <img src="images/yellow-walk.jpg" class="dice_border dice-6">
                 </div>
                 <div class="dice-7 r-dice-7">
-                    <img src="images/green-brain.jpg" class="dice_border d1">
-                    <img src="images/green-brain.jpg" class="dice_border">
-                    <img src="images/green-brain.jpg" class="dice_border">
-                    <img src="images/green-brain.jpg" class="dice_border">
-                    <img src="images/green-brain.jpg" class="dice_border">
-                    <img src="images/green-brain.jpg" class="dice_border">
+                    <img src="images/green-brain.jpg" class="dice_border d1 dice-5">
+                    <img src="images/green-brain.jpg" class="dice_border dice-4">
+                    <img src="images/green-brain.jpg" class="dice_border dice-3">
+                    <img src="images/green-brain.jpg" class="dice_border dice-2">
+                    <img src="images/green-brain.jpg" class="dice_border dice-1">
+                    <img src="images/green-brain.jpg" class="dice_border dice-0">
                 </div>
             </div>
             <!--CENTER SIDE-->
