Active Dice and images
Added active dice color change according to the type of dice randomly chosen.
Also added new images

--- a/index.html
+++ b/index.html
@@ -58,9 +58,15 @@
                         </div>
                     </div>
                     <div class="zd-main-dice center_rows">
-                        <div class="zd-dice-0 zd_active_dice"></div>
-                        <div class="zd-dice-1 zd_active_dice"></div>
-                        <div class="zd-dice-2 zd_active_dice"></div>
+                        <div class="zd-dice-0 zd_active_dice">
+                            <img src="images/gray-brain.jpg" class="active-dice-0 active_dice_img">
+                        </div>
+                        <div class="zd-dice-1 zd_active_dice">
+                            <img src="images/gray-brain.jpg" class="active-dice-1 active_dice_img">
+                        </div>
+                        <div class="zd-dice-2 zd_active_dice">
+                            <img src="images/gray-brain.jpg" class="active-dice-2 active_dice_img">
+                        </div>
                     </div>
                     <div class="zd-player-actions center_rows">
 
