Add resetDice function

--- a/index.html
+++ b/index.html
@@ -49,9 +49,15 @@
                     </div>
                     <div class="zd-scorer center_rows">
                         <div class="zd-shots half_row">
-                            <div class="shot-0 shot_icon"></div>
-                            <div class="shot-1 shot_icon"></div>
-                            <div class="shot-2 shot_icon"></div>
+                            <div class="shot-0 shot_icon">
+                                <img src="images/gray-bullet.jpg" class="bullet-1 bullet_img_size">
+                            </div>
+                            <div class="shot-1 shot_icon">
+                                <img src="images/gray-bullet.jpg" class="bullet-2 bullet_img_size">
+                            </div>
+                            <div class="shot-2 shot_icon">
+                                <img src="images/gray-bullet.jpg" class="bullet-3 bullet_img_size">
+                            </div>
                         </div>
                         <div class="zd-brains half_row">
 
