More javascript and action bar

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             </div>
                         </div>
                         <div class="zd-brains half_row">
-
+                            <h1 class="zd-brains-count">0</h1>
                         </div>
                     </div>
                     <div class="zd-main-dice center_rows">
@@ -75,7 +75,23 @@
                         </div>
                     </div>
                     <div class="zd-player-actions center_rows">
-
+                        <div class="load_actions">
+                            <p>LOAD DICE</p>
+                        </div>
+                        <div class="roll_actions">
+                            <p>ROLL DICE</p>
+                        </div>
+                    </div>
+                    <div class="zd-player-actions center_rows">
+                        <div class="hold_actions">
+                            <p>HOLD BRAINS</p>
+                        </div>
+                        <div class="reroll_actions">
+                            <p>REROLL WALKS</p>
+                        </div>
+                    </div>
+                    <div class="new_gamer center_rows">
+                        <p>NEW GAME</p>
                     </div>
                 </div>
             </div>
@@ -84,15 +100,19 @@
                 <div class="players-section">
                     <div class="player-card-0 p-card">
                         <div class="player-pic-0 p-pic"></div>
+                        <h1 class="player-brain-0">0</h1>
                     </div>
                     <div class="player-card-1 p-card">
                         <div class="player-pic-1 p-pic"></div>
+                        <h1 class="player-brain-1">0</h1>
                     </div>
                     <div class="player-card-2 p-card">
                         <div class="player-pic-2 p-pic"></div>
+                        <h1 class="player-brain-2">0</h1>
                     </div>
                     <div class="player-card-3 p-card">
                         <div class="player-pic-3 p-pic"></div>
+                        <h1 class="player-brain-3">0</h1>
                     </div>
                 </div>
             </div>
