Simple CSS change
Centered brain counter, changed color of active player border, added border for current player display

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             </div>
                         </div>
                         <div class="zd-brains half_row">
-                            <h1 class="zd-brains-count">0</h1>
+                            <h1 class="zd-brains-count wt_center">0</h1>
                         </div>
                     </div>
                     <div class="zd-main-dice center_rows">
