Finalize working zd
Added rules pop out and added brains counter

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 
 <div id="full_back">
 
+    <div id="game_rules_pop" class="wt_center">
+        <div class="rules_text_contain wt_center">
+            <h1>HOW TO PLAY: ZOMBIE DICE</h1>
+            <p>In Zombie Dice, you are a zombie. You want braaains – more brains than any of your zombie buddies. The 13 custom dice are your victims. Push your luck to eat their brains, but stop rolling before the shotgun blasts end your turn! Whoever collects 13 brains first wins.</p><br>
+            <p>Each turn, you take three dice roll them. A brain symbol is worth one point at the end of the round, while footsteps mean the victim has escaped. Shotgun blasts on the other hand are bad because if you collect three shotgun blasts during your turn, it is over for you and you get no points. After rolling three dice, you may decide if you want to score your current brain collection or if you want to push your luck by grabbing new dice so you have three again and roll once more.</p><br>
+            <p>There are 3 colors of dice: Green, Yellow, and Red. Greens have a higher chance of rolling brains, yellows have the same change for every each outcome, and reds have a higher chance of rolling shots.</p>
+            <p class="close_rules">CLOSE RULES</p>
+        </div>
+    </div>
     <div id="game_board" class="wt_center">
         <div class="game_board_inner">
             <!--LEFT-SIDE-->
@@ -59,7 +68,7 @@
                             </div>
                         </div>
                         <div class="zd-brains half_row">
-                            <h1 class="zd-brains-count wt_center">0</h1>
+                            <h1 class="wt_center">Brains<br><span class="zd-brains-count">0</span></h1>
                         </div>
                     </div>
                     <div class="zd-main-dice center_rows">
@@ -85,8 +94,8 @@
                         <div class="hold_actions">
                             <p>HOLD BRAINS</p>
                         </div>
-                        <div class="reroll_actions">
-                            <p>REROLL WALKS</p>
+                        <div class="rules_actions">
+                            <p>RULES</p>
                         </div>
                     </div>
                     <div class="new_gamer center_rows">
